--- a/rx_digiprint_gui/Views/LH702View/LH702_Par.xaml
+++ b/rx_digiprint_gui/Views/LH702View/LH702_Par.xaml
@@ -25,11 +25,13 @@
 
             <Grid x:Name="ParamsGrid">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="120"/>
                     <ColumnDefinition Width="70"/>
                     <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -47,7 +49,7 @@
 
             </Grid>
 
-            <Grid Grid.Row="1" Margin="0,5,0,-4">
+            <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
