--- a/rx_digiprint_gui/Views/LH702View/LH702_View.xaml
+++ b/rx_digiprint_gui/Views/LH702View/LH702_View.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1500">
 
-    <Grid>
+    <Grid x:Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -23,22 +23,36 @@
 
         <!-- toolbar LEFT _______________________________________________________ -->
         <rx_uc:CommandButtons/>
-        <rx_uc:SetupButtons HorizontalAlignment="Right"/>
+        <!--
+        <common:RxButton x:Name="Button_Add" Click="Add_Clicked">
+            <Image Source="{StaticResource add_ico}"/>
+        </common:RxButton>
+        -->
         
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <Image x:Name="MachineImg"  
-                Source="..\..\Resources\Bitmaps\LH702\LH702.jpg"     
-                HorizontalAlignment="Left"
-                Height="250"
-                Margin="100,0"
-            />
-            <!-- Width="{Binding ElementName=MachineGrid, Path=ActualWidth}" 
-                ScrollViewer.VerticalScrollBarVisibility="Disabled"
-            -->
+        <rx_uc:SetupButtons HorizontalAlignment="Right"/>
 
-            <!-- Consumables ________________________________________________________________________-->
-            <tex:TexConsumables Grid.Row="1"  Grid.Column="0" HorizontalAlignment="Right"/>
-        </StackPanel>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+
+            <local:LH702_Preview x:Name="Preview" Grid.Column="0"
+                        MinHeight="100"
+                        Margin="40,5,0,0"
+                        Loaded="Preview_Loaded"
+                        Source="{Binding Preview}"                       
+                        MouseDown="Preview_MouseDown"/>
+
+            <Image Grid.Column="1" x:Name="MachineImg"  
+                    Source="..\..\Resources\Bitmaps\LH702\LH702.jpg"     
+                    HorizontalAlignment="Left"
+                    Height="250"
+                    Margin="20,0"
+                    />
+            <tex:TexConsumables Grid.Column="2" HorizontalAlignment="Right"/>
+        </Grid>
 
         <!-- MAIN Window _________________________________________________________________________-->
         <Grid Grid.Row="2" Margin="0,5">
@@ -54,11 +68,13 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <local:LH702_Par Grid.Column="0"/>
-                    <rx_uc:CleaningView Grid.Column="1" Width="250" HorizontalAlignment="Left"/>
+                   <!-- <local:LH702_ImgSettings Grid.Column="0"/> -->
+                    <local:LH702_Par Grid.Column="1"/>
+                    <rx_uc:CleaningView Grid.Column="2" Width="250" HorizontalAlignment="Right"/>
                 </Grid>
                 
             </Grid>
