--- a/rx_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
+++ b/rx_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
@@ -80,7 +80,7 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="Length" />
-                <common:RxNumBox   Grid.Row="0" Grid.Column="1" Text="{Binding ScanLength}" HorizontalAlignment="Right" Width="60" x:Name="LengthBox"/>
+                <common:RxNumBox   Grid.Row="0" Grid.Column="1" Text="{Binding ScanLength}" HorizontalAlignment="Right" Width="60" x:Name="LengthBox" Min="0"/>
                 <StackPanel  Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Orientation="Horizontal">
                     <common:RxRadioButton Content="m"       Background="Transparent" IsChecked="{Binding LengthUnitMM}"/>
                     <common:RxRadioButton Content="copies"  Background="Transparent" IsChecked="{Binding LengthUnitCopies}" Last="True"/>
@@ -107,17 +107,17 @@
                 </Grid.RowDefinitions>
                 
                 <TextBlock Grid.Column="0" Text="From"/>
-                <common:RxNumBox   Grid.Column="1" Text="{Binding FirstPage}" HorizontalContentAlignment="Right"/>
+                <common:RxNumBox   Grid.Column="1" Text="{Binding FirstPage}" HorizontalContentAlignment="Right" Min="0" IsInt="True"/>
                 <TextBlock Grid.Column="3" Text="To"/>
                 <StackPanel Grid.Column="4" Orientation="Horizontal">
-                    <common:RxNumBox Text="{Binding LastPage}" Width="60" HorizontalContentAlignment="Right"/>
+                    <common:RxNumBox Text="{Binding LastPage}" Width="60" HorizontalContentAlignment="Right" Min="0" IsInt="True"/>
                     <TextBlock Text=" ("/>
                     <TextBlock Text="{Binding SrcPages}"/>
                     <TextBlock Text=")"/>
                 </StackPanel>
                 
                 <TextBlock   Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Copies"/>
-                <common:RxNumBox Grid.Row="1" Grid.Column="1" Text="{Binding Copies}" HorizontalContentAlignment="Right" />
+                <common:RxNumBox Grid.Row="1" Grid.Column="1" Text="{Binding Copies}" HorizontalContentAlignment="Right" Min="0" IsInt="True"/>
 
                 <TextBlock Grid.Row="1" Grid.Column="3" Text="Collate"/>
                 <igWPF:XamComboEditor Grid.Row="1" Grid.Column="4" 
@@ -148,7 +148,7 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="0" Text="Copy"/>
-                <common:RxNumBox Grid.Column="1" Text="{Binding StartFrom}" HorizontalContentAlignment="Right"/>
+                <common:RxNumBox Grid.Column="1" Text="{Binding StartFrom}" HorizontalContentAlignment="Right" Min="0" IsInt="True"/>
 
                 <TextBlock       x:Name="StartPageTxt" Grid.Column="3" Text="Page" />
                 <common:RxNumBox x:Name="StartPageNum" Grid.Column="4" Text="{Binding StartPage}" HorizontalContentAlignment="Right"/>
@@ -204,7 +204,7 @@
                 <TextBlock  Grid.Row="2" Grid.Column="3" Text="m/min" Margin="5,0,0,0"/>
 
                 <TextBlock          Grid.Row="3" Grid.Column="0" Text="Image Margin" />
-                <common:RxNumBox    Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin}" HorizontalAlignment="Stretch" />
+                <common:RxNumBox    Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin}" HorizontalAlignment="Stretch" Min="0"/>
                 <TextBlock          Grid.Row="3" Grid.Column="2" Text="mm" Margin="5,0,0,0" />
 
                 <TextBlock Grid.Row="4" Grid.Column="0" Text="PrintGo Mode" VerticalAlignment="Center"/>
@@ -216,7 +216,7 @@
                 </rx:RxComboBox>
 
                 <TextBlock          Grid.Row="5" Grid.Column="0" Text="Image Distance" />
-                <common:RxNumBox    Grid.Row="5" Grid.Column="1" Text="{Binding PrintGoDist}" HorizontalAlignment="Stretch"/>
+                <common:RxNumBox    Grid.Row="5" Grid.Column="1" Text="{Binding PrintGoDist}" HorizontalAlignment="Stretch" Min="0"/>
                 <TextBlock          Grid.Row="5" Grid.Column="2" Text="mm" Margin="5,0,0,0" />
 
             </Grid>
