--- a/rx_digiprint_gui/Views/PrintQueueView/FileSettingsScan.xaml
+++ b/rx_digiprint_gui/Views/PrintQueueView/FileSettingsScan.xaml
@@ -51,14 +51,14 @@
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="Length" />
-                <common:RxNumBox   Grid.Row="0" Grid.Column="1" Text="{Binding ScanLength}" HorizontalContentAlignment="Right" Width="60"/>
+                <common:RxNumBox   Grid.Row="0" Grid.Column="1" Text="{Binding ScanLength}" HorizontalContentAlignment="Right" Width="60" Min="0" IsInt="True"/>
                 <StackPanel  Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Orientation="Horizontal">
                     <common:RxRadioButton Content="m"       Background="Transparent" IsChecked="{Binding LengthUnitMM}" />
                     <common:RxRadioButton Content="copies"  Background="Transparent" IsChecked="{Binding LengthUnitCopies}" Last="True"/>
                 </StackPanel>
             
                 <TextBlock         Grid.Row="1" Grid.Column="0" Text="Start at" />
-                <common:RxNumBox   Grid.Row="1" Grid.Column="1" Text="{Binding StartFrom}" HorizontalContentAlignment="Right" Height="24" VerticalAlignment="Top" />
+                <common:RxNumBox   Grid.Row="1" Grid.Column="1" Text="{Binding StartFrom}" HorizontalContentAlignment="Right" Height="24" VerticalAlignment="Top" Min="0" IsInt="True"/>
 
             </Grid>
         </GroupBox>
@@ -196,12 +196,12 @@
                 
                 <TextBlock   Grid.Row="6" Grid.Column="0" Text="&#x0081;" FontFamily="Wingdings" />
                 <TextBlock   Grid.Row="6" Grid.Column="1" Text="Image Margin"/>
-                <common:RxNumBox Grid.Row="6" Grid.Column="2" Text="{Binding PageMargin}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right"/>
+                <common:RxNumBox Grid.Row="6" Grid.Column="2" Text="{Binding PageMargin}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Min="0"/>
                 <TextBlock   Grid.Row="6" Grid.Column="3" Text="mm" Margin="5,0,0,0" FontSize="{StaticResource FontSizeStd}" VerticalAlignment="Center"/>
 
                 <TextBlock   Grid.Row="7" Grid.Column="0" Text="&#x0082;" FontFamily="Wingdings" />
                 <TextBlock   Grid.Row="7" Grid.Column="1" Text="Image Gap"/>
-                <common:RxNumBox Grid.Row="7" Grid.Column="2" Text="{Binding PrintGoDist}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right"/>
+                <common:RxNumBox Grid.Row="7" Grid.Column="2" Text="{Binding PrintGoDist}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Min="0"/>
                 <TextBlock   Grid.Row="7" Grid.Column="3" Text="mm" Margin="5,0,0,0" FontSize="{StaticResource FontSizeStd}" VerticalAlignment="Center"/>
 
                 <uc:PreviewScan Grid.Row="1" Grid.Column="4" Grid.RowSpan="7" 
