--- a/rx_digiprint_gui/Views/PrintSystemView/PrintSystemView.xaml
+++ b/rx_digiprint_gui/Views/PrintSystemView/PrintSystemView.xaml
@@ -92,10 +92,10 @@
                         </Grid.ColumnDefinitions>
                         <rxView:InkSupplyGrid x:Name="InkSupplyGrid" />
                         <TextBlock x:Name="ChillerError" Text="Chiller not running" Visibility="{Binding Running, Converter={StaticResource BoolToInVisible_Converter}}" Foreground="Red" FontWeight="Bold" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <StackPanel Grid.Column="1" x:Name="RobotButtons">
+                        <StackPanel Grid.Column="1" x:Name="RobotButtons" Visibility="{Binding TxRobot, Converter={StaticResource BoolToVisible_Converter}}">
                             <Button Content="CAP"      Click="Cap_Clicked"/>
                             <Button Content="Wipe"     Click="Wipe_Clicked"/>
-                            <Button Content="Wet Wipe" Click="WetWipe_Clicked"/>
+                            <Button Content="Vacuum"   Click="Vacuum_Clicked"/>
                             <Button Content="Wash"     Click="Wash_Clicked"/>
                         </StackPanel>
                     </Grid>
