--- a/rx_digiprint_gui/Views/TexView/TexCfg.xaml
+++ b/rx_digiprint_gui/Views/TexView/TexCfg.xaml
@@ -64,8 +64,8 @@
                     <Grid Grid.Row="9" Grid.ColumnSpan="3" Background="#7FD3D3D3" Margin="150,0,0,0" x:Name="HeadRefEnable">
                         <TextBlock Text="ONLY AVAILABLE IN ERROR STATE" HorizontalAlignment="Center" Foreground="Red" FontWeight="Bold"/>
                     </Grid>
-                    <rx_uc:PlcParCtrl Grid.Row="10" Grid.Column="0" ID="CFG_SLAVE_OFFSET"                 Label="Slave Offset"    Format="f" UserEnabled="usr_service" x:Name="SlaveOffset"/>
-                    <rx_uc:PlcParCtrl Grid.Row="10" Grid.Column="1" ID="STA_SLAVE_OFFSET"                 Label=""      Unit="mm" Format="f" IsEnabled="False"/>
+                    <rx_uc:PlcParCtrl Grid.Row="10" Grid.Column="0" ID="CFG_SLAVE_OFFSET"                 Label="Web-Out Offset"    Format="f" UserEnabled="usr_service" x:Name="SlaveOffset"/>
+                    <rx_uc:PlcParCtrl Grid.Row="10" Grid.Column="1" ID="STA_SLAVE_OFFSET"                 Label=""      Unit="mm"   Format="f" IsEnabled="False"/>
                     <rx_uc:PlcCommand Grid.Row="10" Grid.Column="2" ID="CMD_OFFSET_SLAVE"                 Label="SET"  Padding="5,0"  User="usr_service" PreviewMouseUp="Offset_Clicked"/>
                     <TextBlock Grid.Row="11" Grid.Column="0" Text="Magnetic Band"/>
                     <rx_uc:PlcCommand Grid.Row="11" Grid.Column="2" ID="CMD_RESET_MAGNETIC_BAND"          Label="RESET"  Padding="5,0"  User="usr_service" x:Name="MagneticBand"/>
