--- a/rx_digiprint_gui/Views/LH702View/LH702_Preview.xaml
+++ b/rx_digiprint_gui/Views/LH702View/LH702_Preview.xaml
@@ -30,8 +30,14 @@
                     <Image 
                     x:Name="Image"
                     Source="{Binding Preview}"
-                    RenderTransformOrigin="0.5,0.5" 
-                    />
+                    RenderTransformOrigin="0.5,0.5"
+                    >
+                    <!--
+                    <Image.LayoutTransform>
+                        <RotateTransform Angle="90"/>
+                    </Image.LayoutTransform>
+                    -->
+                </Image>
 
             </Border>
             <Rectangle x:Name="PrintMark" Fill="Black" Width="5" Height="20"/>
