--- a/rx_digiprint_gui/Views/LH702View/LH702_View.xaml
+++ b/rx_digiprint_gui/Views/LH702View/LH702_View.xaml
@@ -13,8 +13,8 @@
     <Grid x:Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -23,14 +23,14 @@
 
         <!-- toolbar LEFT _______________________________________________________ -->
         <rx_uc:CommandButtons/>
-        <!--
-        <common:RxButton x:Name="Button_Add" Click="Add_Clicked">
+        <common:RxButton x:Name="Button_Add" Click="Add_Clicked" HorizontalAlignment="Right">
             <Image Source="{StaticResource add_ico}"/>
         </common:RxButton>
+
+        <!--
+        <rx_uc:SetupButtons HorizontalAlignment="Right"/>
         -->
         
-        <rx_uc:SetupButtons HorizontalAlignment="Right"/>
-
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -45,12 +45,6 @@
                         Source="{Binding Preview}"                       
                         MouseDown="Preview_MouseDown"/>
 
-            <Image Grid.Column="1" x:Name="MachineImg"  
-                    Source="..\..\Resources\Bitmaps\LH702\LH702.jpg"     
-                    HorizontalAlignment="Left"
-                    Height="250"
-                    Margin="20,0"
-                    />
             <tex:TexConsumables Grid.Column="2" HorizontalAlignment="Right"/>
         </Grid>
 
